# ai-toolkit

./: .gitattributes  .gitignore  CONTRIBUTING.md  NOTICE  README.md  matnorm-crm.code-workspace  matnorm-mcc.code-workspace
projects/MCC/backend/: .env.example  pyproject.toml
projects/MCC/backend/app/: main.py
projects/MCC/backend/app/api/: addin.py  admin.py  auth.py  health.py  jobs.py  rag.py
projects/MCC/backend/app/core/: config.py  crypto.py  schemas.py
projects/MCC/backend/app/data/: rules.json
projects/MCC/backend/app/db/: __init__.py  models.py  session.py
projects/MCC/backend/app/services/: admin_exports.py  admin_monitor.py  calc.py  clients_monitor.py  errors.py  geometry.py  job_store.py  jobs_runner.py  ocr.py  providers_store.py  rag_client.py  rules_registry.py  sessions.py  verify.py  versioning.py  vision.py
projects/MCC/backend/app/services/llm/: __init__.py  anthropic.py  base.py  ollama.py  openai_compat.py  registry.py  router.py  structured.py
projects/MCC/backend/tests/: conftest.py  geometry_fixtures.py  test_addin.py  test_admin.py  test_assembly.py  test_audit_security.py  test_auth.py  test_calc_zagotovki.py  test_clients_api.py  test_crypto.py  test_db_schema.py  test_health.py  test_job_modes.py  test_jobs_modes.py  test_jobs_runner.py  test_llm_external.py  test_llm_router.py  test_llm_structured.py  test_providers_api.py  test_rag_proxy.py  test_rules_registry.py  test_versioning.py  test_vision.py
projects/ai_matnorm_greenfield_cursor/backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
projects/ai_matnorm_greenfield_cursor/backend/alembic/: env.py  script.py.mako
projects/ai_matnorm_greenfield_cursor/backend/alembic/versions/: 001_initial.py
projects/ai_matnorm_greenfield_cursor/backend/app/: __init__.py  cli.py  main.py
projects/ai_matnorm_greenfield_cursor/backend/app/api/v1/: activity.py  admin.py  assistant.py  auth.py  calculation_files.py  files.py  (+13 more)
projects/ai_matnorm_greenfield_cursor/backend/app/core/: audit.py  config.py  encryption.py  logging.py  permissions.py  rate_limit.py  revision_guard.py  security.py  security_headers.py
projects/ai_matnorm_greenfield_cursor/backend/app/db/: base.py  models.py  session.py
projects/ai_matnorm_greenfield_cursor/backend/app/schemas/: auth.py  documents.py  files.py  health.py  jobs.py  llm_outputs.py  projects.py
projects/ai_matnorm_greenfield_cursor/backend/app/services/: assembly_linker.py  document_classifier.py  document_pipeline.py  fact_extraction.py  ksi_builder.py  material_calculator.py  process_analyzer.py  text_extraction.py
projects/ai_matnorm_greenfield_cursor/backend/app/workers/: rq_app.py  run_worker.py  tasks.py
projects/ai_matnorm_greenfield_cursor/backend/tests/: conftest.py  test_admin_providers.py  test_auth.py  test_documents.py  test_excel.py  test_files.py  test_health.py  test_jobs.py  test_ksi.py  test_logout.py  test_materials.py  test_monitoring.py  test_projects.py  test_rag.py  test_validator.py
projects/local-llm-channel/: .env.example  .gitignore  Makefile  README.md  alembic.ini  cli.py  docker-compose.yml  pyproject.toml
projects/local-llm-channel/api/: __init__.py  main.py
projects/local-llm-channel/bench/: __init__.py  models.yaml  ollama_client.py  registry.py  runner.py  vram.py
projects/local-llm-channel/bench/scorers/: __init__.py  judge.py  pipeline.py  rule_based.py  speed.py
projects/local-llm-channel/bench/tasks/: __init__.py  base.py  coding.yaml  general_ru.yaml
projects/local-llm-channel/bot/: __init__.py  cycle.py  editorial.py  publisher.py  review.py  scheduler.py
projects/local-llm-channel/content/: __init__.py  charts.py  generator.py  render.py
projects/local-llm-channel/content/templates/: benchmark_roundup.md.j2  fits_6gb.md.j2  head_to_head.md.j2  howto.md.j2  model_review.md.j2  news.md.j2
projects/local-llm-channel/core/: __init__.py  config.py  db.py  models.py  schemas.py
projects/local-llm-channel/docs/: TZ.md
projects/local-llm-channel/migrations/: env.py
projects/local-llm-channel/migrations/versions/: 001_initial.py
projects/local-llm-channel/scripts/: gate_phase.py  ollama_preflight.py  project_dod_check.py
projects/local-llm-channel/scripts/hooks/: update_phase_state.py
projects/local-llm-channel/tests/: test_db_smoke.py  test_generator.py  test_runner_smoke.py  test_scorers.py  test_vram.py
projects/task-feasibility/backend/: Dockerfile  README.md  pyproject.toml
projects/task-feasibility/backend/app/: __init__.py  config.py  main.py
projects/task-feasibility/backend/app/agents/: __init__.py  graph.py  state.py
projects/task-feasibility/backend/app/api/: __init__.py
projects/task-feasibility/backend/app/guardrails/: __init__.py  patterns.py  shield.py
projects/task-feasibility/backend/app/llm/: __init__.py  router.py
projects/task-feasibility/backend/app/schemas/: __init__.py  analyze.py  safety.py
projects/task-feasibility/backend/app/services/: __init__.py  markdown_builder.py  token_estimator.py
projects/task-feasibility/backend/tests/: __init__.py  conftest.py  test_api.py  test_guardrails.py  test_router_node.py  test_token_estimator.py
projects/НТИ/backend/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
projects/НТИ/backend/app/: __init__.py  main.py
projects/НТИ/backend/app/api/: __init__.py  admin_web.py  mobile.py
projects/НТИ/backend/app/db/: __init__.py  database.py  models.py
projects/НТИ/backend/app/services/: activity.py  ollama.py  security.py  seed.py
projects/НТИ/backend/scripts/: check_all.sh  open_firewall.sh  run_dev.sh  setup_wifi.sh  start_all.sh  tunnel_and_build.sh  tunnel_public.sh
projects/НТИ/backend/tests/: conftest.py  test_mobile_api.py
projects/СРМ/backend/: Dockerfile  pyproject.toml
projects/СРМ/backend/app/api/: jobs.py
projects/СРМ/backend/app/services/: excel_format.py  geometry.py  vision.py
projects/СРМ/backend/tests/: test_assembly.py  test_calc.py
projects/СРМ/services/rag/: Dockerfile  pyproject.toml
projects/СРМ/services/rag/app/: main.py  seed.py
(+742 files in other folders)
