# Copyright 2026 Rinat Ishmaev
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "llm-channel"
version = "0.1.0"
description = "Local LLM benchmark and Telegram content engine for 6GB VRAM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "apscheduler>=3.10.4",
    "asyncpg>=0.30.0",
    "greenlet>=3.1.0",
    "httpx>=0.28.0",
    "jinja2>=3.1.4",
    "matplotlib>=3.9.0",
    "ollama>=0.4.0",
    "pillow>=11.0.0",
    "psutil>=6.1.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "pynvml>=11.5.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "rich>=13.9.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "typer>=0.15.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "types-PyYAML>=6.0.12",
    "types-psutil>=6.1.0",
]

[project.scripts]
llm-channel = "cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "bench", "content", "bot", "api"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"core/models.py" = ["UP042"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["core", "bench", "content", "bot"]

[[tool.mypy.overrides]]
module = ["pynvml.*", "matplotlib.*", "ollama.*", "apscheduler.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
