# Copyright 2026 Rinat Ishmaev
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[project]
name = "ai-matnorm-backend"
version = "0.1.0"
description = "AI-MATNORM backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "email-validator>=2.2",
  "sqlalchemy[asyncio]>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.2",
  "python-jose[cryptography]>=3.3",
  "passlib[argon2]>=1.7",
  "argon2-cffi>=23.1",
  "httpx>=0.27",
  "redis>=5.0",
  "rq>=1.16",
  "boto3>=1.34",
  "python-multipart>=0.0.9",
  "openpyxl>=3.1",
  "pymupdf>=1.24",
  "pdfplumber>=0.11",
  "pillow>=10.4",
  "pytesseract>=0.3",
  "cryptography>=42.0",
  "sse-starlette>=2.1",
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "aiosqlite>=0.20",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
