[project]
name = "matnorm-rag"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.9.2",
  "pydantic-settings==2.5.2",
  "chromadb==0.5.5",
]
[project.optional-dependencies]
dev = ["pytest==8.3.3", "ruff==0.6.8", "mypy==1.11.2", "httpx==0.27.2"]

[tool.setuptools]
packages = ["app", "app.core"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
